Fix text spacing

--- a/src/components/Header/Navs/SubNav.scss
+++ b/src/components/Header/Navs/SubNav.scss
@@ -44,6 +44,8 @@ a{
         align-content: center;
         background-color: rgb(25, 151, 164);
         height: 100%;
+        padding-top: 10px;
+        letter-spacing: 1px;
     }
   // background-color: LightBlue;
     
